# geometry

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  annotated.html  catch_8hpp_source.html  class_a_a_b_b.html  classes.html  classgeometry_1_1_a_a_b_b-members.html  classgeometry_1_1_a_a_b_b.html  classgeometry_1_1_a_a_b_b_square-members.html  classgeometry_1_1_a_a_b_b_square.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_2e99064d2dd5dab1a3d32ba7f9e2ce40.html  dir_2ea30aa2956a8db99dd22aa5e597f384.html  dir_396d0e25f4ed1a4f7613fd5be906569f.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_95513f8caad3299fdc7688686239e349.html  dir_a2af99e47cdc8e7340cd18863d7c8479.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dedda661d52f15c544835a0f3f778e7c.html  files.html  functions.html  functions_func.html  geometry_8h_source.html  hierarchy.html  index.html  md_README.html  pages.html  struct_x_y-members.html  struct_x_y.html  structgeometry_1_1_a_a_b_b_square-members.html  structgeometry_1_1_a_a_b_b_square.html  structgeometry_1_1_point-members.html  structgeometry_1_1_point.html  structgeometry_1_1_x_y-members.html  structgeometry_1_1_x_y.html
include/: .geometry.h.swp  geometry.h
latex/: annotated.tex  class_a_a_b_b.tex  dir_2e99064d2dd5dab1a3d32ba7f9e2ce40.tex  dir_396d0e25f4ed1a4f7613fd5be906569f.tex  dir_a2af99e47cdc8e7340cd18863d7c8479.tex  refman.tex  struct_x_y.tex
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_c.js  (+14 more)
(+6 files in other folders)
