
cmake_minimum_required(VERSION 2.8.9)
project (geometry)
include_directories(include)
file(GLOB SOURCES src/*.cpp)
file(GLOB TESTS tests/*.cpp)
add_definitions(-Wall -pedantic -std=c++11)
add_library(${CMAKE_PROJECT_NAME} SHARED ${SOURCES})
add_executable(demo src/main.cpp)
target_link_libraries(demo ${CMAKE_PROJECT_NAME})
add_executable(Test ${TESTS})
target_link_libraries(Test ${CMAKE_PROJECT_NAME})
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
